zokrates_cli/examples/compile_errors/constant_assignment.zok
const field a = 1;

def main() -> field {
    a = 2; // not allowed
    return a;
}
